tests/test_files/invalid/semantic/task_defined_multiple_times.pfdl
# SPDX-FileCopyrightText: The PFDL Contributors
# SPDX-License-Identifier: MIT

Task task_1
    Service
End

# Name of the Task is already assigned
Task task_1
    Service
End